hamburger header on small screen and correct scrolling

--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -10,10 +10,10 @@ main {
   color: black;
 }
 
-html,
+/* html,
 body {
   overflow-x: hidden;
 }
 body {
   position: relative;
-}
+} */
