--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -7,24 +7,72 @@
   margin: 0px;
 }
 
-.home header ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  list-style-type: none;
-  max-width: 15in;
+.home header .small {
   margin-left: auto;
   margin-right: auto;
 }
 
-.home header .button {
+.home header .small .button {
   color: white;
   padding: 20px;
-  font-size: 25px;
+  padding-bottom: 0px;
+  font-size: 45px;
 }
 
-.home header .button:hover {
+.home header .small .button:hover {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
+.home header .large ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  list-style-type: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.home header .large .button {
+  color: white;
+  padding: 10px;
+  margin: 10px;
+  font-size: 20px;
+}
+
+.home header .large .button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+@media (min-width: 765px) {
+  .home header {
+    background-color: #006b50;
+    border: solid #006b50;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    margin: 0px;
+  }
+
+  .home header .large ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    list-style-type: none;
+    max-width: 15in;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .home header .large .button {
+    color: white;
+    padding: 20px;
+    font-size: 25px;
+  }
+
+  .home header .large .button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+      0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  }
+}
